# autoswe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
src/autoswe/: __init__.py  main.py  permission.py  refactor.py  review.py  streaming.py  structured.py
