[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoswe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncer>=0.0.8",
    "claude-agent-sdk>=0.1.18",
    "pydantic>=2.0",
    "typer>=0.15.0",
]

[project.scripts]
autoswe = "autoswe.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/autoswe"]

[dependency-groups]
dev = [
    "pyright>=1.1.0",
    "ruff>=0.1.0",
    "pre-commit>=4.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
